[package]
name = "rioos_builder_marketplacesrv"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO/OS Identity and Access library"
workspace = "../../"

[dependencies]

postgres = { version = "0.15.2", features = ["with-chrono"] }
chrono = { version = "0.4.2", features = ["serde"] }
rand = "*"
serde_json = "1.0.16"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_builder_db]
path = "../builder-db"

[features]
functional = []
