[package]
name = "rioos_builder_health_nodes"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO/OS Deployment library"
workspace = "../../"

[dependencies]
postgres = { version = "0.15.2", features = ["with-chrono"] }
chrono = { version = "0.4.2", features = ["serde"] }
serde_json = "1.0.16"
itertools = "*"
cidr = "0.0.4"
oping = "0.3.3"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_builder_db]
path = "../builder-db"

[dependencies.rioos_telemetry]
path = "../telemetry"

[features]
functional = []
