[package]
name = "habitat_builder_protocol"
version = "0.0.0"
authors = ["Vinothini V <vino.v@megam.io>", "Kishorekumar Neelamegam <nkishore@megam.io>"]
description = "RIO/OS Aran Server Communication Protocol"
build = "build.rs"
workspace = "../../"

[dependencies]
protobuf = "*"
serde = "*"
serde_derive = "*"
time = "*"
regex = "*"
lazy_static = "*"

[dependencies.habitat_core]
path = "../core"

[build-dependencies]
pkg-config = "0.3"

[features]
functional = []
protocols = []
