[package]
name = "rioos_builder_protocol"
version = "0.0.0"
authors = ["Vinothini V <vino.v@megam.io>", "Kishorekumar Neelamegam <nkishore@megam.io>"]
description = "RIO/OS Aran Server Communication Protocol"
build = "build.rs"
workspace = "../../"

[dependencies]
rand = "*"
serde = "1.0.2"
serde_json = "*"
serde_derive = "*"
time = "*"
regex = "*"
lazy_static = "*"

[dependencies.rioos_core]
path = "../core"

[build-dependencies]
pkg-config = "0.3"

[features]
functional = []
protocols = []
