[package]
name = "rioos_builder_protocol"
version = "0.0.0"
authors = ["Vinothini V <vino.v@megam.io>", "Kishorekumar Neelamegam <nkishore@megam.io>"]
description = "RIO/OS Aran Server Communication Protocol"
build = "build.rs"
workspace = "../../"

[dependencies]
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "*"
time = "*"
regex = "*"

[build-dependencies]
pkg-config = "0.3"

[features]
functional = []
protocols = []
