[package]
name = "rioos_builder_scalesrv"
version = "0.0.0"
authors = ["Vinothini V <vino.v@megam.io>", "Kishorekumar Neelamegam <nkishore@megam.io>"]
description = "RIO/OS Deployment library"
build = "../bldr-build.rs"
workspace = "../../"

[dependencies]
postgres = { version = "0.14.2", features = ["with-chrono"] }
chrono = { version = "0.3.0", features = ["serde"] }
rand = "*"
serde = "1.0.11"
serde_json = "1.0.2"


[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]


[dependencies.rioos_builder_protocol]
path = "../builder-protocol"

[dependencies.rioos_builder_db]
path = "../builder-db"


[features]
functional = []
