[package]
name = "rioos_builder_scalesrv"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO/OS Scaler library"
workspace = "../../"

[dependencies]
postgres = { version = "0.15.1", features = ["with-chrono", "with-serde_json"] }
chrono = { version = "0.4.2", features = ["serde"] }
serde_json = "1.0.16"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_builder_db]
path = "../builder-db"

[dependencies.rioos_telemetry]
path = "../telemetry"


[features]
functional = []
