[package]
name = "rioos_builder_services"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO/OS Identity and Access (teams/permissions) library"
workspace = "../../"

[dependencies]
postgres = { version = "0.15.2", features = ["with-chrono"] }
chrono = { version = "0.4.6", features = ["serde"] }
serde_json = "1.0.27"
rand = "0.5.3"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_builder_db]
path = "../builder-db"

[features]
functional = []
