[package]
name = "rioos_builder_session"
version = "0.0.0"
authors = ["Vinothini V <vino.v@megam.io>", "Kishorekumar Neelamegam <nkishore@megam.io>"]
description = "RIO/OS Identity Access Manager"
build = "../build-builder.rs"
workspace = "../../"

[dependencies]
bitflags = "*"
hyper = "0.10.12"
r2d2 = "*"
postgres = { version = "0.14.2", features = ["with-chrono"] }
chrono = { version = "0.3.0", features = ["serde"] }
rand = "*"
serde = "1.0.11"
serde_json = "1.0.2"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.rioos_builder_db]
path = "../builder-db"

[dependencies.rioos_builder_protocol]
path = "../builder-protocol"

[dependencies.ldap3]
version = "0.5"

[features]
functional = []
