[package]
name = "rioos_builder_session"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO/OS Identity Access Manager"
build = "../build-builder.rs"
workspace = "../../"


[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
rand = "*"
postgres = { version = "0.15.1", features = ["with-chrono","with-serde_json"] }
serde_json = "1.0.10"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_builder_db]
path = "../builder-db"

[dependencies.ldap3]
version = "0.5.1"

[features]
functional = []
