[package]
name = "rioos_builder_storages"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO/OS Cluster (storage) library"
workspace = "../../"

[dependencies]
postgres = { version = "0.15.2", features = ["with-chrono"] }
chrono = { version = "0.4.6", features = ["serde"] }
serde_json = "1.0.27"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_builder_db]
path = "../builder-db"


[features]
functional = []
